# ncnn_deploy

./: .gitignore  CMakeLists.txt  ncnn
include/: deploy.hpp
src/: deploy.cpp
transfer/: calibration_set_list.txt  convert.py  ncnn2int8  ncnn2mem  ncnn2table  ncnnmerge  ncnnoptimize  onnx2ncnn
